--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -101,6 +101,23 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2024-12-31">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2024-12-31-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/e1cb19dc65fe145e5652417f9d9ba379.webp" alt="12月31日更新20.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2024-12-31-free-shadowrocket-node.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">12月31日更新20.4M/S，2025年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了美国、欧洲、日本、新加坡、加拿大、香港、韩国等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                12月31日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2024-12-30">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -254,23 +271,6 @@
                                 12月22日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2024-12-21">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2024-12-21-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/76102f0ccd571ad24bf10b61732c8d20.webp" alt="12月21日更新18.7M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2024-12-21-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">12月21日更新18.7M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了加拿大、新加坡、香港、日本、韩国、欧洲、美国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                12月21日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li><li><a href="/free-nodes/page-8.htm">8</a></li><li><a href="/free-nodes/page-9.htm">9</a></li><li><a href="/free-nodes/page-10.htm">10</a></li><li><a href="/free-nodes/page-11.htm">11</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            </div>
@@ -280,8 +280,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-23-clash-v2ray-ss-ssr.htm">11月23日更新20.6M/S，2024年最新高速Clash/SSR/Shadowrocket/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、香港、欧洲、日本、美国、韩国等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-25941.htm">家用小型狗粮机器价格表（小型家用狗粮制作机）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈家用小型狗粮机器价格表，以及小型家用狗粮制作机对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里有卖做猫粮狗粮的机器多少钱一台...  </p>
             </div>
         </div>
     </div>
@@ -290,8 +290,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-37307.htm">动物疫苗注射部位图片高清（动物疫苗的使用方法及注意事项）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗注射部位图片高清的知识，其中也会对动物疫苗的使用方法及注意事项进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打.</p>
+                <h4><a href="/free-nodes/2024-10-25-shadowrocket-node.htm">10月25日更新18.5M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了美国、加拿大、新加坡、韩国、香港、欧洲、日本等地区,最高速度可达18.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -300,8 +300,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-35376.htm">厦门市宠物领养中心地址（厦门领养宠物猫中心）</a></h4>
-                <p>摘要：       今天给各位分享厦门市宠物领养中心地址的知识，其中也会对厦门领养宠物猫中心进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、厦门宠物猫在哪买..</p>
+                <h4><a href="/free-nodes/2024-11-12-free-subscribe-node.htm">11月12日更新21.6M/S，2024年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、美国、日本、香港、欧洲、韩国、新加坡等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -310,8 +310,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-21-free-high-speed-nodes.htm">12月21日更新18.7M/S，2024年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、香港、日本、韩国、欧洲、美国等地区,最高速度可达18.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-11-21-clash-v2ray-ss-ssr.htm">11月21日更新21M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了香港、加拿大、日本、美国、韩国、欧洲、新加坡等地区,最高速度可达21 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -320,8 +320,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-1-free-node-subscribe.htm">1月1日更新21.6M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、加拿大、韩国、香港、新加坡、日本、欧洲等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-25940.htm">git下载、安装、配置与简单应用</a></h4>
+                <p>目录 1 git下载、安装与配置 1.1下载与安装 1.1.1登录git官网：Git (git-scm.com)点击击图中红线圈出的Downloads,进入下载页面。 1.1.2根据自己系统，下载相应</p>
             </div>
         </div>
     </div>
@@ -330,8 +330,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-11-11-clash-node-daily-updates.htm">11月11日更新21.7M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、新加坡、香港、美国、欧洲、韩国等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-20-free-ssr-subscribe.htm">12月20日更新22.5M/S，2024年最新高速SSR/V2ray/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、韩国、新加坡、加拿大、日本、香港、美国等地区,最高速度可达22.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -340,8 +340,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-10-30-free-subscribe-node.htm">10月30日更新20.5M/S，2024年最新高速Clash/SSR/V2ray/Shadowrocket订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、新加坡、香港、日本、美国、韩国、欧洲等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-19496.htm">初中学历能考什么证来提升自己（初中学历可以考个什么证）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈初中学历能考什么证来提升自己，以及初中学历可以考个什么证对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、初中学历怎么提升学历啊...   </p>
             </div>
         </div>
     </div>
@@ -350,8 +350,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-32044.htm">哈尔滨农大动物医院电话号码是多少（哈尔滨农业动物医院）</a></h4>
-                <p>摘要：       今天给各位分享哈尔滨农大动物医院电话号码是多少的知识，其中也会对哈尔滨农业动物医院进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、哈尔滨宠.</p>
+                <h4><a href="/free-nodes/2024-11-15-clash-windows.htm">11月15日更新20.6M/S，2024年最新高速Clash/Shadowrocket/V2ray/SSR订阅链接免费节点订阅</a></h4>
+                <p>这一次的节点更新覆盖了日本、韩国、加拿大、美国、欧洲、香港、新加坡等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -360,8 +360,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-4-free-clash-subscribe.htm">12月4日更新20.8M/S，2024年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、香港、美国、新加坡、韩国、欧洲等地区,最高速度可达20.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2024-12-27-clash-windows.htm">12月27日更新19M/S，2024年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、韩国、日本、加拿大、美国、欧洲等地区,最高速度可达19 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -370,8 +370,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2024-12-16-clash-node-daily-updates.htm">12月16日更新21.2M/S，2024年最新高速V2ray/SSR/Shadowrocket/Clash订阅链接免费节点订阅</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、新加坡、美国、日本、加拿大、香港、韩国等地区,最高速度可达21.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-30139.htm">58同城宠物狗免费领养的有没有骗局（58同城宠物专区的领养）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈58同城宠物狗免费领养的有没有骗局，以及58同城宠物专区的领养对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、我想领养一狗狗,见58同..</p>
             </div>
         </div>
     </div>
@@ -382,7 +382,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">57</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
+                                <h4><span class="badge" style="float: right;">60</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                                 <h4><span class="badge" style="float: right;">93</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
                                 <h4><span class="badge" style="float: right;">34</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
                                 <h4><span class="badge" style="float: right;">25</span> <a href="/date/2024-10/" title="2024-10 归档">2024-10</a></h4>
